# efm32gg12b810

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: acmp0.rs  adc1.rs  can0.rs  cmu.rs  cryotimer.rs  crypto0.rs  csen.rs  ebi.rs  emu.rs  etm.rs  fpueh.rs  gpcrc.rs  gpio.rs  i2c0.rs  idac0.rs  lcd.rs  ldma.rs  lesense.rs  letimer0.rs  leuart1.rs  lib.rs  msc.rs  pcnt1.rs  pdm.rs  prs.rs  qspi0.rs  rmu.rs  rtc.rs  rtcc.rs  sdio.rs  smu.rs  timer0.rs  trng0.rs  uart1.rs  usb.rs  vdac0.rs  wdog1.rs
src/acmp0/: aportreq.rs  extifctrl.rs  hysteresis0.rs  ifs.rs  routepen.rs
src/acmp1/: ctrl.rs  ien.rs  if_.rs  ifc.rs  inputsel.rs  routeloc0.rs
src/acmp2/: aportconflict.rs  hysteresis1.rs  status.rs
src/adc0/: aportmasterdis.rs  biasprog.rs  cmpthr.rs  ctrl.rs  ien.rs  ifs.rs  scanctrl.rs  scandata.rs  scandatax.rs  scanfifocount.rs  scaninputsel.rs  scanmask.rs  scannegsel.rs  singlectrl.rs  singlectrlx.rs  singledatap.rs  status.rs
src/adc1/: aportconflict.rs  aportreq.rs  cal.rs  cmd.rs  if_.rs  ifc.rs  scanctrlx.rs  scandatap.rs  scandataxp.rs  scanfifoclear.rs  singledata.rs  singlefifoclear.rs  singlefifocount.rs
src/can0/: config.rs  ctrl.rs  errcnt.rs  if0ien.rs  if0if.rs  if1if.rs  intid.rs  messagedata.rs  messagestate.rs  mir0_arb.rs  mir0_cmdmask.rs  mir0_ctrl.rs  mir0_datah.rs  mir0_datal.rs  mir0_mask.rs  mir1_arb.rs  mir1_ctrl.rs  transreq.rs
src/can1/: bittiming.rs  if0ifc.rs  if0ifs.rs  if1ien.rs  if1ifc.rs  if1ifs.rs  mir0_cmdreq.rs  mir1_cmdmask.rs  mir1_cmdreq.rs  mir1_datah.rs  mir1_datal.rs  mir1_mask.rs  route.rs  status.rs  test.rs
(+1309 files in other folders)
